--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "author": "",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest --no-watch --coverage"
   },
   "dependencies": {
     "esbuild": "^0.27.2",
     "prompt-sync": "^4.2.0"
+  },
+  "devDependencies": {
+    "@vitest/coverage-v8": "^4.0.18",
+    "vitest": "^4.0.18"
   }
 }
